New orders page done

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -2,5 +2,7 @@
 
 {% block title %}Home{% endblock title %}
 {% block content %}
-<h1 style="color:#ff7200;"><b>Welcome to the Computerised Maintenance Management System</b></h1>
+<h1 style="color:#ff7200;"><b>Welcome to the CMMS</b></h1>
+<hr>
+<h2 style="color:#ff7200;">Explore the webapp.</h2>
 {% endblock content %}
