--- a/workorders/templates/workorders/workorders_list.html
+++ b/workorders/templates/workorders/workorders_list.html
@@ -8,7 +8,7 @@
   <h1 style="color:#ff7200; margin-bottom: 15px;"><b>Open Work Orders</b>
   </div>
   <div class="col-2">
-  <a href="" class="btn btn-outline-success" style="float: right;">New</a></h1>
+  <a href="{% url 'workorders_new' %}" class="btn btn-outline-success" style="float: right;">New</a></h1>
     </div>
   </div>
   <hr>
