--- a/workorders/templates/workorders/workorders_delete.html
+++ b/workorders/templates/workorders/workorders_delete.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}About{% endblock title %}
+{% block title %}Delete "{{ workorder.title }}" {% endblock title %}
 
 {% block content %}
-
+<form method="post">{% csrf_token %}
+    <p>Are you sure you want to delete "{{ workorder.title }}"?</p>
+    <a class="btn btn-outline-secondary" href="{% url 'workorders_detail' workorder.pk %}" role="button">Cancel</a>
+    <button class="btn btn-outline-danger" type="submit">Confirm</button>
+</form>
 {% endblock content %}
