--- a/workorders/templates/workorders/workorders_detail.html
+++ b/workorders/templates/workorders/workorders_detail.html
@@ -7,12 +7,17 @@
   <h5 class= "font-italic">{{ order.targetuser}},</h5>
   <p style="font-size: larger";>{{ order.text }}</p>
   <hr>
+  {% if order.urgent == 1 %}
+  <h3 class="text-danger">[URGENT]</h3>
+  {% endif %}
 <p><b>{{ order.author }}</b></p>
 <p><em>{{ order.published_date }}</em></p>
 <hr>
 <a class="btn btn-outline-secondary" href="{% url 'workorders_list' %}" role="button">Close</a>
+{% if user.is_authenticated %}
 <a class="btn btn-outline-success" href="{% url 'workorders_new' %}" role="button">New</a>
 <a class="btn btn-outline-primary" href="{% url 'workorders_edit' pk=order.pk %}" role="button">Edit</a>
 <a class="btn btn-outline-danger" href="{% url 'workorders_delete' pk=order.pk %}" role="button">Delete</a>
+{% endif %}
 
 {% endblock content %}
