--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -17,7 +17,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    
+
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link text-light" href="{% url 'home' %}"><b>Home</b></a>
@@ -29,10 +29,10 @@
         <a class="nav-link text-light" href="{% url 'workorders_list' %}"><b>Orders</b></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href=""><b>Assets</b></a>
+        <a class="nav-link text-light" href="{% url 'assets_list' %}"><b>Assets</b></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href=""><b>Parts</b></a>
+        <a class="nav-link text-light" href="{% url 'parts_list' %}"><b>Parts</b></a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-light" href=""><b>Schedule</b></a>
@@ -44,7 +44,7 @@
     </ul>
 
   </div>
-  
+
 </nav>
     <div id="content" style="margin: 24px;">
       {% block content %}
@@ -53,7 +53,7 @@
 
 <footer class="bs-footer text-center" style="background-color: #f5f5f5; position: fixed; bottom: 0; width: 100%;">
   <span class="text-muted">Created by <a href="http://MfonUdoh.Github.io">Mfon Udoh<a></a> Ltd</span>
-</footer> 
+</footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
