--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -32,7 +32,7 @@
         <a class="nav-link text-light" href="{% url 'assets_list' %}"><b>Assets</b></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href="{% url 'parts_list' %}"><b>Parts</b></a>
+        <a class="nav-link text-light" href="{% url 'assets_list' %}"><b>Parts</b></a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-light" href=""><b>Schedule</b></a>
