--- a/parts/templates/parts/delete.html
+++ b/parts/templates/parts/delete.html
@@ -5,7 +5,7 @@
 {% block content %}
 <form method="post">{% csrf_token %}
     <p>Are you sure you want to delete "{{ part.name }}"?</p>
-    <a class="btn btn-outline-secondary" href="{% url 'parts_detail' part.pk %}" role="button">Cancel</a>
+    <a class="btn btn-outline-secondary" href="{% url 'parts_detail' pk2=part.pk %}" role="button">Cancel</a>
     <button class="btn btn-outline-danger" type="submit">Confirm</button>
 </form>
 {% endblock content %}
