--- a/workorders/templates/workorders/list.html
+++ b/workorders/templates/workorders/list.html
@@ -24,14 +24,15 @@
           {% else %}
           <h4 class="text">{{ order.title }}</h4>
           {% endif %}
-
       </div>
     <div class="card-body">
-      <p class= "font-italic">{{ order.targetuser }}</p>
+      <p class= "font-italic"><b>{{ order.targetuser }}</b></p>
       <p class="card-text">{{ order.text|linebreaksbr }}</p>
+      <a class="text" href="{% url 'assets_detail' pk=order.assigned_asset_id %}"><b>{{ order.assigned_asset }}</b></a>
     </div>
-    <h4 class="text"><b>{{ order.assigned_asset }}</b></h4>
-    <div class="card-footer bg-transparent border-secondary align-items-center"><b>{{ order.author }}</b>    {{ order.published_date }} <a href="{% url 'workorders_detail' pk=order.pk %}" class="btn btn-outline-primary" style="float: right;">View</a></div>
+    <div class="card-footer bg-transparent border-secondary align-items-center">
+      <b>{{ order.author }}</b>    {{ order.published_date }} <a href="{% url 'workorders_detail' pk=order.pk %}" class="btn btn-outline-primary" style="float: right;">View</a>
+    </div>
     </div>
   </div>
 {% endfor %}
