--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -26,13 +26,13 @@
         <a class="nav-link text-light" href="{% url 'about' %}"><b>About</b></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href="{% url 'workorders_list' %}"><b>Orders</b></a>
+        <a class="nav-link text-light" href="{% url 'workorders_all' %}"><b>Orders</b></a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-light" href="{% url 'assets_list' %}"><b>Assets</b></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href="{% url 'assets_list' %}"><b>Parts</b></a>
+        <a class="nav-link text-light" href="{% url 'parts_all' %}"><b>Parts</b></a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-light" href=""><b>Schedule</b></a>
