--- a/parts/templates/parts/detail.html
+++ b/parts/templates/parts/detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1 style="color:#ff7200;"><b>{{ part.name }}</b></h1>
-  <h5 class= "font-italic">{{ part.assigned_asset }},</h5>
+  <a class= "font-italic" href="{% url 'assets_detail' pk=asset.pk %}">{{ part.assigned_asset }}</a>
   <p style="font-size: larger";>{{ part.description }}</p>
   <hr>
 <p><em>{{ part.created_date }}</em></p>
