--- a/workorders/templates/workorders/new.html
+++ b/workorders/templates/workorders/new.html
@@ -70,7 +70,7 @@
       </div>
   </div>
   <hr>
-  <a class="btn btn-outline-secondary" href="{% url 'workorders_list' %}" role="button">Cancel</a>
+  <a class="btn btn-outline-secondary" href="{% url 'workorders_all' %}" role="button">Cancel</a>
   <button class="btn btn-outline-success" type="submit">Save</button>
 </form>
 {% endblock content %}
