First Phase Complete
All of the views (assets, parts and orders) working completely including the parts delete method.
All the work for this phase has been completed, basic data handling functionality and linking is available so the webapp is more than useable in its current stage!

Next stage is to increase functionality wrt targeting users and multiple users contributing data

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -35,7 +35,7 @@
         <a class="nav-link text-light" href="{% url 'parts_all' %}"><b>Parts</b></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href=""><b>Schedule</b></a>
+        <a class="nav-link disabled" href=""><b>Schedule</b></a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="{% url 'admin:index' %}"><b>Admin</b></a>
