--- a/assets/templates/assets/detail.html
+++ b/assets/templates/assets/detail.html
@@ -4,12 +4,13 @@
 
 {% block content %}
 <h1 style="color:#ff7200;"><b>{{ asset.name }}</b></h1>
-  <h5 class= "font-italic">{{ asset.location}},</h5>
+  <h5>{{ asset.location}}</h5>
   <p style="font-size: larger";>{{ asset.description }}</p>
 
 <p><em>{{ asset.created_date }}</em></p>
 <hr>
 <a class="btn btn-outline-warning" href="{% url 'parts_list' pk=asset.pk %}" role="button">View Parts</a>
+<a class="btn btn-outline-info" href="{% url 'workorders_list' pk=asset.pk %}" role="button">View Orders</a>
 <hr>
 <a class="btn btn-outline-secondary" href="{% url 'assets_list' %}" role="button">Close</a>
 {% if user.is_authenticated %}
