--- a/parts/templates/parts/list.html
+++ b/parts/templates/parts/list.html
@@ -17,13 +17,12 @@
   <div class="col-12 col-md-12">
     <div class="card border-secondary mb-3">
       <div class="card-header border-secondary">
-          <h4 class="text">{{ part.name }}</h4>
+          <h4 class="text"><a href="{% url 'parts_detail' pk=asset.pk pk2=part.pk %}">{{ part.name }}</a></h4>
       </div>
     <div class="card-body">
       <p class= "font-italic"><b>Quantity:</b> {{ part.quantity }}</p>
       <p class="card-text"><b>Description:</b>  {{ part.description|linebreaksbr }}</p>
     </div>
-    <div class="card-footer bg-transparent border-secondary align-items-center">{{ part.created_date }}<a href="{% url 'parts_detail' pk=asset.pk pk2=part.pk %}" class="btn btn-outline-primary" style="float: right;">View</a></div>
     </div>
   </div>
 {% endfor %}
