--- a/workorders/templates/workorders/delete.html
+++ b/workorders/templates/workorders/delete.html
@@ -5,7 +5,7 @@
 {% block content %}
 <form method="post">{% csrf_token %}
     <p>Are you sure you want to delete "{{ workorder.title }}"?</p>
-    <a class="btn btn-outline-secondary" href="{% url 'workorders_detail' workorder.pk %}" role="button">Cancel</a>
+    <a class="btn btn-outline-secondary" href="{% url 'workorders_detail' pk=workorder.pk %}" role="button">Cancel</a>
     <button class="btn btn-outline-danger" type="submit">Confirm</button>
 </form>
 {% endblock content %}
