--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>{% block title %}{% endblock title %}</title>
+    <script src="https://kit.fontawesome.com/74716f574e.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/ico" href="{% static 'favicon.ico' %}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
