--- a/assets/templates/assets/list.html
+++ b/assets/templates/assets/list.html
@@ -8,7 +8,9 @@
   <h1 style="color:#ff7200; margin-bottom: 15px;"><b>Assets</b></h1>
   </div>
   <div class="col-2">
+  {% if user.is_authenticated %}
   <a href="{% url 'assets_new' %}" class="btn btn-outline-success" style="float: right;">New</a>
+  {% endif %}
     </div>
   </div>
   <hr>
