--- a/parts/templates/parts/list.html
+++ b/parts/templates/parts/list.html
@@ -8,7 +8,9 @@
   <h1 style="color:#ff7200; margin-bottom: 15px;"><b><a href="{% url 'assets_detail' pk=asset.pk %}" style="color:#ff7200;">{{ asset.name }}</a> - List of Parts</b></h1>
   </div>
   <div class="col-2">
+  {% if user.is_authenticated %}
   <a href="{% url 'parts_new' pk=asset.pk %}" class="btn btn-outline-success" style="float: right;">New</a>
+  {% endif %}
     </div>
   </div>
   <hr>
