--- a/workorders/templates/workorders/All.html
+++ b/workorders/templates/workorders/All.html
@@ -8,7 +8,9 @@
   <h1 style="color:#ff7200; margin-bottom: 15px;"><b>All Open Work Orders</b></h1>
   </div>
   <div class="col-2">
+  {% if user.is_authenticated %}
   <a href="{% url 'workorders_new' %}" class="btn btn-outline-success" style="float: right;">New</a>
+  {% endif %}
     </div>
   </div>
   <hr>
