Updated webapp logo

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -12,7 +12,7 @@
   <body>
       <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #ff7200;">
   <a class="navbar-brand" href="{% url 'home' %}">
-    <img src="{% static 'tnt.png' %}" width="70" height="30" alt="" class="d-inline-block align-top">
+    <img src="{% static 'logo.png' %}" width="50" height="50" alt="" class="d-inline-block align-top">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
