User registration, login, logout fully implemented

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -10,12 +10,11 @@
     <div class="col-12 col-md-9">
 <div class="card">
   <div class="card-header">
-    <b>About</b>
+    <b>Welcome to the Computerised Facility Management System</b>
   </div>
   <div class="card-body">
-    <h5 class="card-title">Why I made this web-application</h5>
-    <p class="card-text text-justify">At my workplace, we are currently fielding options for CMMS systems to manage the maintenance schedules of the departments around the country. As so happens, I am learning about web-development so thought it would be a great learning oporunity to try and build a system like this.</p>
-    <p></p>
+    <h5 class="card-title">This is a live demonstration of the web-application!</h5>
+    <p class="card-text text-justify">While not logged, in you can only view posts on the website, however you can start creating, editing and deleting posts by <a href="{% url 'register' %}">registering</a> an account and <a href="{% url 'login' %}">logging</a> in.</p>
     <p class="text-right">- Mfon :)</p>
     <a href="{% url 'home' %}" class="btn btn-primary">Get Started</a>
   </div>
