--- a/workorders/templates/workorders/All.html
+++ b/workorders/templates/workorders/All.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row">
     <div class="col-10">
-  <h1 style="color:#ff7200; margin-bottom: 15px;"><b>All Open Work Orders</b></h1>
+  <h1 style="color:#ff7200; margin-bottom: 15px;"><b>All Work Orders</b></h1>
   </div>
   <div class="col-2">
   {% if user.is_authenticated %}
