Minor fixes and UX improvements

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -3,6 +3,8 @@
 {% block title %}Register an Account{% endblock %}
 
 {% block content %}
+<h1 style="color:#ff7200; margin-bottom: 15px;"><b>Register an Account</b></h1>
+<hr>
 <form method="POST" class="form-group">{% csrf_token %}
     <div class="col-12">
     <div class="row" style="padding-top: 4px">
