--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -3,6 +3,8 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
+<h1 style="color:#ff7200; margin-bottom: 15px;"><b>Login</b></h1>
+<hr>
 <form method="POST" class="form-group">{% csrf_token %}
   <div class="col-12">
     <div class="row" style="padding-top: 4px">
